changed file paths

--- a/career.html
+++ b/career.html
@@ -57,18 +57,18 @@
         </nav>
     </header>
     <div class="back-to-courses">
-        <a href="career.html">
+        <a href="index.html">
             <i class="fa-solid fa-arrow-left-long"></i>Back to Home
 
         </a>
     </div>
     <div class="course-main-content">
 
-        <img src="img/uiux.jpg" alt="ui/ux">
+        <img src="img/mech.jpg" alt="ui/ux">
         <div class="course-main-text">
-            <h1>Mech</h1>
+            <h1>Mechanical</h1>
             <p></p>
-            <a href="register.html">Apply</a>
+            <!-- <a href="register.html">Apply</a> -->
         </div>
         <div class="dropdown-box">
             <h2>Course Program</h2>
@@ -186,35 +186,41 @@
     </div>
 
     <footer>
-
-        <div class="footer-1">
-            <div class="footer-logo-cont">
-                <img src="img/logo.png" alt="logo">
-                <h1>CourseCore</h1>
-            </div>
-            <div class="payment-cont">
-                <p>Secure Payment</p>
-                <img src="img/visa-mastercard.png" alt="payment">
-            </div>
         </div>
         <div class="footer-2" id="contact-us">
-            <h2>Contact Us</h2>
+            <h3>Contact Us</h3>
             <ul>
-                <a href="#"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a>
-                <a href="#"><i class="fa-solid fa-envelope"></i> coursecore.support@gmail.com</a>
-                <a href="#"><i class="fa-brands fa-twitter"></i> @coursecore</a>
+                <a href="/">Contacts</a>
+                <a href="/">Collaborate</a>
+                <a href="/">Sponsors</a>
             </ul>
         </div>
         <div class="footer-3">
-            <h2>Useful Newsletter</h2>
-            <p>Let us notify you about new blog articles, new free courses and share useful
-                materials.</p>
-            <form class="footer-news-action">
-                <input type="text" placeholder="Your E-mail...">
-                <button type="submit">Send</button>
-            </form>
+            <h3>Social-media</h3>
+            <ul>
+                <a href="/">Instagram</a>
+                <a href="/">Twitter</a>
+                <a href="/">LinkedIn</a>
+            </ul>
         </div>
+        <div class="logo">
+            <img src="/" alt="logo">
+            <a href="index.html">
+                <h1>Tech Treks</h1>
+            </a>
+        </div>
+        <form class="footer-action">
+            <div>
+                <a class="form-mail-section" href="/"><i class="fa-solid fa-envelope"></i> TechTreks@gmail.com</a>
+            </div>
+            <input type="text" placeholder="Your E-mail...">
+            <button type="submit">Send</button>
+        </form>
+        </div>
+        <div class="footer-rights">Tech-Treks © .
+            All rights reserved.</div>
     </footer>
+
 
     <script src="js/script.js"></script>
 </body>
