--- a/courses.html
+++ b/courses.html
@@ -92,7 +92,7 @@
                             systems and consumer
                             products</p>
                         <div class="card-action">
-                            <a href="courses.html" class="button">Explore</a>
+                            <a href="career.html" class="button">Explore</a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                             accessibility, and environmental impact.</p>
 
                         <div class="card-action">
-                            <a href="#" class="button">Explore</a>
+                            <a href="career.html" class="button">Explore</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                             projects that meet safety, environmental, and economic requirements</p>
 
                         <div class="card-action">
-                            <a href="#" class="button">Explore</a>
+                            <a href="career.html" class="button">Explore</a>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                             within Earth's atmosphere
                             or in the vacuum of space.</p>
                         <div class="card-action">
-                            <a href="#" class="button">Explore</a>
+                            <a href="career.html" class="button">Explore</a>
                         </div>
                     </div>
 
