--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <p>Non-tech roles are the backbone of every industry's success story,They're the architects of
                             innovation, the strategists behind growth.....</p>
                         <div class="card-action">
-                            <a href="career.html" class="button">Read more</a>
+                            <a href="/" class="button">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -175,16 +175,6 @@
     </div>
 
     <footer>
-
-        <!-- <div class="footer-1">
-            <div class="footer-logo-cont">
-                <img src="img/logo.png" alt="logo">
-                <h1>CourseCore</h1> -->
-        <!-- </div>
-            <div class="payment-cont">
-                <p>Secure Payment</p>
-                <img src="img/visa-mastercard.png" alt="payment">
-            </div> -->
         </div>
         <div class="footer-2" id="contact-us">
             <h3>Contact Us</h3>
@@ -192,8 +182,6 @@
                 <a href="/">Contacts</a>
                 <a href="/">Collaborate</a>
                 <a href="/">Sponsors</a>
-                <!-- <a href="/"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a> 
-                <a href="/"><i class="fa-brands fa-twitter"></i> @coursecore</a> -->
             </ul>
         </div>
         <div class="footer-3">
