footer changed in all files

--- a/index.html
+++ b/index.html
@@ -173,43 +173,36 @@
         </div>
         <img src="img/abt-us.jpg" alt="About us img">
     </div>
-
     <footer>
+        <div class="footer-logo">
+            <img src="img/logo.png" alt="logo">
+            <h1>Tech Trek</h1>
         </div>
-        <div class="footer-2" id="contact-us">
+        <div class="footer-contact" id="contact-us">
             <h3>Contact Us</h3>
             <ul>
-                <a href="/">Contacts</a>
-                <a href="/">Collaborate</a>
-                <a href="/">Sponsors</a>
+                <li><a href="/">Contacts</a></li>
+                <li><a href="/">Collaborate</a></li>
+                <li><a href="/">Sponsors</a></li>
             </ul>
         </div>
-        <div class="footer-3">
-            <h3>Social-media</h3>
+        <div class="footer-social">
+            <h3>Social Media</h3>
             <ul>
-                <a href="/">Instagram</a>
-                <a href="/">Twitter</a>
-                <a href="/">LinkedIn</a>
+                <li><a href="/">Instagram</a></li>
+                <li><a href="/">Twitter</a></li>
+                <li><a href="/">LinkedIn</a></li>
             </ul>
         </div>
-        <div class="logo">
-            <img src="/" alt="logo">
-            <a href="index.html">
-                <h1>Tech Treks</h1>
-            </a>
+        <div class="footer-subscribe">
+            <form class="footer-action">
+                <input type="email" placeholder="Your E-mail...">
+                <button type="submit">Send</button>
+            </form>
+            <p class="form-mail-section"><i class="fa-solid fa-envelope"></i> TechTreks@gmail.com</p>
         </div>
-        <form class="footer-action">
-            <div>
-                <a class="form-mail-section" href="/"><i class="fa-solid fa-envelope"></i> TechTreks@gmail.com</a>
-            </div>
-            <input type="text" placeholder="Your E-mail...">
-            <button type="submit">Send</button>
-        </form>
-        </div>
-        <div class="footer-rights">Tech-Treks © .
-            All rights reserved.</div>
+        <div class="footer-rights">© 2024 Tech-Treks. All rights reserved.</div>
     </footer>
-
 
     <script src="js/script.js"></script>
 </body>
