--- a/articles.html
+++ b/articles.html
@@ -38,7 +38,7 @@
                     <a href="services.html">SERVICES</a>
                 </li>
                 <li>
-                    <a href="#contact-us">PROJECTS</a>
+                    <a href="projects.html">PROJECTS</a>
                 </li>
             </ul>
             <ul>
