--- a/index.html
+++ b/index.html
@@ -1,210 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech-Treks</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/adaptive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href="img/logo.png">
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/adaptive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="img/logo.png" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        <nav>
-            <div class="logo">
-                <img src="img/logo.png" alt="logo">
-                <a href="index.html">
-                    <h1 class="tech">TechTreks</h1>
-                </a>
-            </div>
-            <ul id="dropdown" class="nav-panel">
-
-                <li class="btns">
-                    <a href="register.html">Log in</a>
-                </li>
-                <li>
-                    <a href="about-us.html">ABOUT</a>
-                </li>
-                <li>
-                    <a href="courses.html">LEARN</a>
-                </li>
-                <li>
-                    <a href="services.html">SERVICES</a>
-                </li>
-                <li>
-                    <a href="#contact-us">PROJECTS</a>
-                </li>
-            </ul>
-            <ul>
-                <li class="buttons">
-                    <a href="register.html"><i class="fa-solid fa-right-to-bracket"></i> Log in</a>
-                </li>
-                <li class="navigation">
-                    <span class="line"></span>
-                    <span class="line"></span>
-                    <span class="line"></span>
-                </li>
-            </ul>
-
-        </nav>
+      <nav>
+        <div class="logo">
+          <img src="img/logo.png" alt="logo" />
+          <a href="index.html">
+            <h1 class="tech">TechTreks</h1>
+          </a>
+        </div>
+        <ul id="dropdown" class="nav-panel">
+          <li class="btns">
+            <a href="register.html">Log in</a>
+          </li>
+          <li>
+            <a href="about-us.html">ABOUT</a>
+          </li>
+          <li>
+            <a href="courses.html">LEARN</a>
+          </li>
+          <li>
+            <a href="services.html">SERVICES</a>
+          </li>
+          <li>
+            <a href="projects.html">PROJECTS</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="buttons">
+            <a href="register.html"
+              ><i class="fa-solid fa-right-to-bracket"></i> Log in</a
+            >
+          </li>
+          <li class="navigation">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-
     <div class="main-container">
-        <div class="main-text">
-            <p class="main-p">Get ready to be on Track Through</p>
-            <h1>Tech_Treks</h1>
-            <script>
-                window.embeddedChatbotConfig = {
-                    chatbotId: "LrK1OeXHmz4C0BgZYdHim",
-                    domain: "www.chatbase.co"
-                }
-            </script>
-            <script src="https://www.chatbase.co/embed.min.js" chatbotId="LrK1OeXHmz4C0BgZYdHim"
-                domain="www.chatbase.co" defer>
-                </script>
-            <!-- <p class="main-p2"><a href="register.html"><span>Log in</span> to start</a></p> -->
-        </div>
-        <div class="main-img">
-            <img src="img/main1.jpg" alt="">
-        </div>
+      <div class="main-text">
+        <p class="main-p">Get ready to be on Track Through</p>
+        <h1>Tech_Treks</h1>
+        <script>
+          window.embeddedChatbotConfig = {
+            chatbotId: "LrK1OeXHmz4C0BgZYdHim",
+            domain: "www.chatbase.co",
+          };
+        </script>
+        <script
+          src="https://www.chatbase.co/embed.min.js"
+          chatbotId="LrK1OeXHmz4C0BgZYdHim"
+          domain="www.chatbase.co"
+          defer
+        ></script>
+        <!-- <p class="main-p2"><a href="register.html"><span>Log in</span> to start</a></p> -->
+      </div>
+      <div class="main-img">
+        <img src="img/main1.jpg" alt="" />
+      </div>
     </div>
 
     <div class="courses">
-        <!-- <h1>Check the most popular courses right now!</h1> -->
-        <div class="cards">
-            <div class="card">
-                <img src="img/career.jpg" alt="">
-                <div class="card-content">
-                    <div class="card-text">
-                        <h2>Career Scope</h2>
-                        <p>Non-tech roles are the backbone of every industry's success story,They're the architects of
-                            innovation, the strategists behind growth.....</p>
-                        <div class="card-action">
-                            <a href="/" class="button">Read more</a>
-                        </div>
-                    </div>
-                </div>
+      <!-- <h1>Check the most popular courses right now!</h1> -->
+      <div class="cards">
+        <div class="card">
+          <img src="img/career.jpg" alt="" />
+          <div class="card-content">
+            <div class="card-text">
+              <h2>Career Scope</h2>
+              <p>
+                Non-tech roles are the backbone of every industry's success
+                story,They're the architects of innovation, the strategists
+                behind growth.....
+              </p>
+              <div class="card-action">
+                <a href="/" class="button">Read more</a>
+              </div>
             </div>
-            <div class="card">
-                <img src="img/java.jpg" alt="">
-                <div class="card-content">
-                    <div class="card-text">
-                        <h2>Projects</h2>
-                        <p>Projects offer a diverse range of opportunities to make a meaningful impact across
-                            industries...
-                        </p>
-                        <div class="card-action">
-                            <a href="#" class="button">Read more</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <img src="img/algorithms.jpg" alt="">
-                <div class="card-content">
-                    <div class="card-text">
-                        <h2>Virtual Lab Modules</h2>
-                        <p>Virtual lab modules that guide users through the simulation process step-by-step
-                            and exercises to reinforce learning objectives...</p>
-                        <div class="card-action">
-                            <a href="#" class="button">Read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img/marketing.jpg" alt="">
-                <div class="card-content">
-                    <div class="card-text">
-                        <h2>Opportunities</h2>
-                        <p>Opportunities abound in fields such as administrative roles, marketing, human
-                            resources,finance, and entrepreneurship,
-                            where individuals can drive innovation, foster growth</p>
-                        <div class="card-action">
-                            <a href="#" class="button">Read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="card">
+          <img src="img/java.jpg" alt="" />
+          <div class="card-content">
+            <div class="card-text">
+              <h2>Projects</h2>
+              <p>
+                Projects offer a diverse range of opportunities to make a
+                meaningful impact across industries...
+              </p>
+              <div class="card-action">
+                <a href="#" class="button">Read more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/algorithms.jpg" alt="" />
+          <div class="card-content">
+            <div class="card-text">
+              <h2>Virtual Lab Modules</h2>
+              <p>
+                Virtual lab modules that guide users through the simulation
+                process step-by-step and exercises to reinforce learning
+                objectives...
+              </p>
+              <div class="card-action">
+                <a href="#" class="button">Read more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/marketing.jpg" alt="" />
+          <div class="card-content">
+            <div class="card-text">
+              <h2>Opportunities</h2>
+              <p>
+                Opportunities abound in fields such as administrative roles,
+                marketing, human resources,finance, and entrepreneurship, where
+                individuals can drive innovation, foster growth
+              </p>
+              <div class="card-action">
+                <a href="#" class="button">Read more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="search-container">
-        <h1>Explore the vast capabilities of </h1>
-        <div class="search">
-            <div class="search-text">
-                <p>With our advanced search you can quickly find the course you want</p>
-                <div class="search-form">
-                    <input type="text" placeholder="Search..."><i class="fa-solid fa-magnifying-glass"></i>
-                    <a href="#">Search</a>
-                </div>
-            </div>
-            <img src="img/search-img.jpg" alt="">
+      <h1>Explore the vast capabilities of</h1>
+      <div class="search">
+        <div class="search-text">
+          <p>
+            With our advanced search you can quickly find the course you want
+          </p>
+          <div class="search-form">
+            <input type="text" placeholder="Search..." /><i
+              class="fa-solid fa-magnifying-glass"
+            ></i>
+            <a href="#">Search</a>
+          </div>
         </div>
+        <img src="img/search-img.jpg" alt="" />
+      </div>
     </div>
 
     <div class="about-us-container">
-        <div class="about-us-text">
-            <h1>Learn and Grow</h1>
-            <div class="about-us-text-block">
-                <h2>Experience</h2>
-                <p>Learn new knowledge and skills in a variety of ways, from engaging video lectures and dynamic
-                    graphics to data visualizations and interactive elements.</p>
-            </div>
-            <div class="about-us-text-block">
-                <h2>Practice</h2>
-                <p>Demonstrating your knowledge is a critical part of learning. CourseCore courses and programs provide
-                    a space
-                    to practice with quizzes, open response assessments, virtual environments, and more.</p>
-            </div>
-            <div class="about-us-text-block">
-                <h2>Apply</h2>
-                <p>Learning on CourseCore transforms how you think and what you can do, and translates directly into the
-                    real
-                    world—immediately apply your new capabilities in the context of your job.</p>
-            </div>
+      <div class="about-us-text">
+        <h1>Learn and Grow</h1>
+        <div class="about-us-text-block">
+          <h2>Experience</h2>
+          <p>
+            Learn new knowledge and skills in a variety of ways, from engaging
+            video lectures and dynamic graphics to data visualizations and
+            interactive elements.
+          </p>
         </div>
-        <img src="img/abt-us.jpg" alt="About us img">
+        <div class="about-us-text-block">
+          <h2>Practice</h2>
+          <p>
+            Demonstrating your knowledge is a critical part of learning.
+            CourseCore courses and programs provide a space to practice with
+            quizzes, open response assessments, virtual environments, and more.
+          </p>
+        </div>
+        <div class="about-us-text-block">
+          <h2>Apply</h2>
+          <p>
+            Learning on CourseCore transforms how you think and what you can do,
+            and translates directly into the real world—immediately apply your
+            new capabilities in the context of your job.
+          </p>
+        </div>
+      </div>
+      <img src="img/abt-us.jpg" alt="About us img" />
     </div>
     <footer>
-        <div class="footer-logo">
-            <img src="img/logo.png" alt="logo">
-            <h1>Tech Trek</h1>
-        </div>
-        <div class="footer-contact" id="contact-us">
-            <h3>Contact Us</h3>
-            <ul>
-                <li><a href="/">Contacts</a></li>
-                <li><a href="/">Collaborate</a></li>
-                <li><a href="/">Sponsors</a></li>
-            </ul>
-        </div>
-        <div class="footer-social">
-            <h3>Social Media</h3>
-            <ul>
-                <li><a href="/">Instagram</a></li>
-                <li><a href="/">Twitter</a></li>
-                <li><a href="/">LinkedIn</a></li>
-            </ul>
-        </div>
-        <div class="footer-subscribe">
-            <form class="footer-action">
-                <input type="email" placeholder="Your E-mail...">
-                <button type="submit">Send</button>
-            </form>
-            <p class="form-mail-section"><i class="fa-solid fa-envelope"></i> TechTreks@gmail.com</p>
-        </div>
-        <div class="footer-rights">© 2024 Tech-Treks. All rights reserved.</div>
+      <div class="footer-logo">
+        <img src="img/logo.png" alt="logo" />
+        <h1>Tech Trek</h1>
+      </div>
+      <div class="footer-contact" id="contact-us">
+        <h3>Contact Us</h3>
+        <ul>
+          <li><a href="/">Contacts</a></li>
+          <li><a href="/">Collaborate</a></li>
+          <li><a href="/">Sponsors</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <h3>Social Media</h3>
+        <ul>
+          <li><a href="/">Instagram</a></li>
+          <li><a href="/">Twitter</a></li>
+          <li><a href="/">LinkedIn</a></li>
+        </ul>
+      </div>
+      <div class="footer-subscribe">
+        <form class="footer-action">
+          <input type="email" placeholder="Your E-mail..." />
+          <button type="submit">Send</button>
+        </form>
+        <p class="form-mail-section">
+          <i class="fa-solid fa-envelope"></i> TechTreks@gmail.com
+        </p>
+      </div>
+      <div class="footer-rights">© 2024 Tech-Treks. All rights reserved.</div>
     </footer>
 
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
