--- a/mech.html
+++ b/mech.html
@@ -1,221 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/courses.css">
-    <link rel="stylesheet" href="style/adaptive.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="img/logo.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/courses.css" />
+    <link rel="stylesheet" href="style/adaptive.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="icon" href="img/logo.png" />
 
     <title>Mechanical</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header>
-        <nav>
-            <div class="logo">
-                <img src="img/logo.png" alt="logo">
-                <a href="index.html">
-                    <h1>Tech Treks</h1>
-                </a>
-            </div>
-            <ul id="dropdown" class="nav-panel">
-
-                <li class="btns">
-                    <a href="register.html">Log in</a>
-                </li>
-                <li>
-                    <a href="about-us.html">ABOUT</a>
-                </li>
-                <li>
-                    <a href="courses.html">LEARN</a>
-                </li>
-                <li>
-                    <a href="services.html">SERVICES</a>
-                </li>
-                <li>
-                    <a href="#contact-us">PROJECTS</a>
-                </li>
-            </ul>
-            <ul>
-                <li class="buttons">
-                    <a href="register.html"><i class="fa-solid fa-right-to-bracket"></i>Log in</a>
-                </li>
-                <li class="navigation">
-                    <span class="line"></span>
-                    <span class="line"></span>
-                    <span class="line"></span>
-                </li>
-            </ul>
-
-        </nav>
+      <nav>
+        <div class="logo">
+          <img src="img/logo.png" alt="logo" />
+          <a href="index.html">
+            <h1>Tech Treks</h1>
+          </a>
+        </div>
+        <ul id="dropdown" class="nav-panel">
+          <li class="btns">
+            <a href="register.html">Log in</a>
+          </li>
+          <li>
+            <a href="about-us.html">ABOUT</a>
+          </li>
+          <li>
+            <a href="courses.html">LEARN</a>
+          </li>
+          <li>
+            <a href="services.html">SERVICES</a>
+          </li>
+          <li>
+            <a href="projects.html">PROJECTS</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="buttons">
+            <a href="register.html"
+              ><i class="fa-solid fa-right-to-bracket"></i>Log in</a
+            >
+          </li>
+          <li class="navigation">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="back-to-courses">
-        <a href="index.html">
-            <i class="fa-solid fa-arrow-left-long"></i>Back to Home
-        </a>
+      <a href="index.html">
+        <i class="fa-solid fa-arrow-left-long"></i>Back to Home
+      </a>
     </div>
     <div class="course-main-content">
-
-        <img src="img/mech.jpg" alt="ui/ux">
-        <div class="course-main-text">
-            <h1>Mechanical</h1>
-            <p></p>
-            <!-- <a href="register.html">Apply</a> -->
+      <img src="img/mech.jpg" alt="ui/ux" />
+      <div class="course-main-text">
+        <h1>Mechanical</h1>
+        <p></p>
+        <!-- <a href="register.html">Apply</a> -->
+      </div>
+      <div class="dropdown-box">
+        <h2>Course Program</h2>
+        <div class="drowBox">
+          <div class="opener">
+            <h1>What is UX and UI design?</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>What is User Experience?</li>
+              <li>What is User Interface?</li>
+              <li>Why is UX Design so Important?</li>
+              <li>Usability - Part of UX</li>
+            </ul>
+          </div>
         </div>
-        <div class="dropdown-box">
-            <h2>Course Program</h2>
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>What is UX and UI design?</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>What is User Experience?</li>
-                        <li>What is User Interface?</li>
-                        <li>Why is UX Design so Important?</li>
-                        <li>Usability - Part of UX</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>UX design</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>Human-Centered Design</li>
-                        <li>Why We Have Evolved From User-Centered Design to People, Human and Humanity Centered Design?
-                        </li>
-                        <li>How to Focus on People When You Solve Complex Global
-                            Challenges?</li>
-                        <li>The UX Design Process:</li>
-                        <li>Discussion Exercise</li>
-                        <li>Choose Theme</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>Grides Wireframe</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>Grid System</li>
-                        <li>Wireframes</li>
-                        <li>Discussion exercise</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>Figma introduction</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>Figma introduction</li>
-                        <li>Creating website in figma</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>UX part review</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>Projects Discussion</li>
-                        <li>Q&A</li>
-                        <li>LinkedIn</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>UI Design</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>UI Patterns</li>
-                        <li>Structure of a page</li>
-                        <li>Organizing content</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>UI Elements</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>Typography</li>
-                        <li>Text styles in Figma</li>
-                        <li>Colors</li>
-                        <li>Icons</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="drowBox">
-                <div class="opener">
-                    <h1>UI part review</h1>
-                    <i class="fas fa-plus-circle"></i>
-                </div>
-                <div class="content">
-                    <ul>
-                        <li>Projects Discussion</li>
-                        <li>Q&A</li>
-                    </ul>
-                </div>
-            </div>
+        <div class="drowBox">
+          <div class="opener">
+            <h1>UX design</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>Human-Centered Design</li>
+              <li>
+                Why We Have Evolved From User-Centered Design to People, Human
+                and Humanity Centered Design?
+              </li>
+              <li>
+                How to Focus on People When You Solve Complex Global Challenges?
+              </li>
+              <li>The UX Design Process:</li>
+              <li>Discussion Exercise</li>
+              <li>Choose Theme</li>
+            </ul>
+          </div>
         </div>
+        <div class="drowBox">
+          <div class="opener">
+            <h1>Grides Wireframe</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>Grid System</li>
+              <li>Wireframes</li>
+              <li>Discussion exercise</li>
+            </ul>
+          </div>
+        </div>
+        <div class="drowBox">
+          <div class="opener">
+            <h1>Figma introduction</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>Figma introduction</li>
+              <li>Creating website in figma</li>
+            </ul>
+          </div>
+        </div>
+        <div class="drowBox">
+          <div class="opener">
+            <h1>UX part review</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>Projects Discussion</li>
+              <li>Q&A</li>
+              <li>LinkedIn</li>
+            </ul>
+          </div>
+        </div>
+        <div class="drowBox">
+          <div class="opener">
+            <h1>UI Design</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>UI Patterns</li>
+              <li>Structure of a page</li>
+              <li>Organizing content</li>
+            </ul>
+          </div>
+        </div>
+        <div class="drowBox">
+          <div class="opener">
+            <h1>UI Elements</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>Typography</li>
+              <li>Text styles in Figma</li>
+              <li>Colors</li>
+              <li>Icons</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="drowBox">
+          <div class="opener">
+            <h1>UI part review</h1>
+            <i class="fas fa-plus-circle"></i>
+          </div>
+          <div class="content">
+            <ul>
+              <li>Projects Discussion</li>
+              <li>Q&A</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
 
-
     <footer>
-        <div class="footer-logo">
-            <img src="img/logo.png" alt="logo">
-            <h1>Tech Trek</h1>
-        </div>
-        <div class="footer-contact" id="contact-us">
-            <h3>Contact Us</h3>
-            <ul>
-                <li><a href="/">Contacts</a></li>
-                <li><a href="/">Collaborate</a></li>
-                <li><a href="/">Sponsors</a></li>
-            </ul>
-        </div>
-        <div class="footer-social">
-            <h3>Social Media</h3>
-            <ul>
-                <li><a href="/">Instagram</a></li>
-                <li><a href="/">Twitter</a></li>
-                <li><a href="/">LinkedIn</a></li>
-            </ul>
-        </div>
-        <div class="footer-subscribe">
-            <form class="footer-action">
-                <input type="email" placeholder="Your E-mail...">
-                <button type="submit">Send</button>
-            </form>
-            <p class="form-mail-section"><i class="fa-solid fa-envelope"></i> TechTreks@gmail.com</p>
-        </div>
-        <div class="footer-rights">© 2024 Tech-Treks. All rights reserved.</div>
+      <div class="footer-logo">
+        <img src="img/logo.png" alt="logo" />
+        <h1>Tech Trek</h1>
+      </div>
+      <div class="footer-contact" id="contact-us">
+        <h3>Contact Us</h3>
+        <ul>
+          <li><a href="/">Contacts</a></li>
+          <li><a href="/">Collaborate</a></li>
+          <li><a href="/">Sponsors</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <h3>Social Media</h3>
+        <ul>
+          <li><a href="/">Instagram</a></li>
+          <li><a href="/">Twitter</a></li>
+          <li><a href="/">LinkedIn</a></li>
+        </ul>
+      </div>
+      <div class="footer-subscribe">
+        <form class="footer-action">
+          <input type="email" placeholder="Your E-mail..." />
+          <button type="submit">Send</button>
+        </form>
+        <p class="form-mail-section">
+          <i class="fa-solid fa-envelope"></i> TechTreks@gmail.com
+        </p>
+      </div>
+      <div class="footer-rights">© 2024 Tech-Treks. All rights reserved.</div>
     </footer>
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
