--- a/projects.html
+++ b/projects.html
@@ -60,37 +60,55 @@
             <h1>Services provided by Tech-Treks to excel you'r Non-tech careers</h1>
         </div>
     </div>
+    <div class="gallery-section">
+        <div class="card">
+            <img src="img/photo1.jpg" alt="Card 1">
+            <div class="card-content">
+                <h3>Card 1 Title</h3>
+                <a href="https://example.com/card1" target="_blank">Read More</a>
+            </div>
+        </div>
 
-    <div class="articles-container">
+        <div class="card">
+            <img src="img/photo2.jpg" alt="Card 2">
+            <div class="card-content">
+                <h3>Card 2 Title</h3>
+                <a href="https://example.com/card2" target="_blank">Read More</a>
+            </div>
+        </div>
 
-        <div class="articles">
-            <div class="article">
-                <h1>Industry Tours</h1>
-                <p>Let's figure out who a Frontend developer is, what he does and how much he earns. We’ll also learn
-                    how Frontend development differs from web development, what skills are needed to start a career, and
-                    where those who want to become Frontend developers can get them.</p>
-                <!-- <div class="article-desc">
-                    <p class="topic">explore</p>
-                </div> -->
+        <div class="card">
+            <img src="img/photo3.jpg" alt="Card 3">
+            <div class="card-content">
+                <h3>Card 3 Title</h3>
+                <a href="https://example.com/card3" target="_blank">Read More</a>
             </div>
-            <div class="article">
-                <h1>Skill Development Workshop</h1>
-                <p>workshops and training sessions focused on developing practical models, time management and
-                    problem-solving.
-                    These workshops can be tailored to the specific needs of different non-tech fields.</p>
+        </div>
+
+        <div class="card">
+            <img src="img/photo4.jpg" alt="Card 4">
+            <div class="card-content">
+                <h3>Card 4 Title</h3>
+                <a href="https://example.com/card4" target="_blank">Read More</a>
             </div>
-            <div class="article">
-                <h1>Professional Development Program</h1>
-                <p>professional development programs and certifications that are recognized and valued in the respective
-                    non-tech industries.
-                    These programs will help individuals enhance their skills, credentials, and employability..</p>
-            </div>
-            <div class="article">
-                <h1>Industry-Specific Challenges and Competitions</h1>
-                <p> Competitions, and hackathons focused on solving real-world problems in non-tech fields. This fosters
-                    creativity, teamwork, and
-                    innovation while providing practical experience in problem-solving and project management..</p>
-            </div>
+        </div>
+    </div>
+
+    <div class="gallery-section">
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
