--- a/projects.html
+++ b/projects.html
@@ -60,39 +60,6 @@
             <h1>Services provided by Tech-Treks to excel you'r Non-tech careers</h1>
         </div>
     </div>
-    <div class="gallery-section">
-        <div class="card">
-            <img src="img/photo1.jpg" alt="Card 1">
-            <div class="card-content">
-                <h3>Card 1 Title</h3>
-                <a href="https://example.com/card1" target="_blank">Read More</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="img/photo2.jpg" alt="Card 2">
-            <div class="card-content">
-                <h3>Card 2 Title</h3>
-                <a href="https://example.com/card2" target="_blank">Read More</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="img/photo3.jpg" alt="Card 3">
-            <div class="card-content">
-                <h3>Card 3 Title</h3>
-                <a href="https://example.com/card3" target="_blank">Read More</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="img/photo4.jpg" alt="Card 4">
-            <div class="card-content">
-                <h3>Card 4 Title</h3>
-                <a href="https://example.com/card4" target="_blank">Read More</a>
-            </div>
-        </div>
-    </div>
 
     <div class="gallery-section">
         <div class="video-container">
@@ -110,6 +77,10 @@
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
         </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+        </div>
+
     </div>
 
 
