added links of projects

--- a/projects.html
+++ b/projects.html
@@ -63,22 +63,28 @@
 
     <div class="gallery-section">
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtube.com/embed/JUn1ty9pNRk" frameborder="0"
+                allowfullscreen>Power
+                Generation From speed
+                Breakers</iframe>
         </div>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bbdQbyff_Sk" frameborder="0"
+                allowfullscreen>Sketch
+                making robot</iframe>
         </div>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Evj_fNKdalM" frameborder="0"
+                allowfullscreen>Water
+                Paper Recycling </iframe>
         </div>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/aPUHraVh-aE" frameborder="0"
+                allowfullscreen>3D Printer</iframe>
         </div>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TfAmIF8tRo8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/F3T-d64Soug" frameborder="0"
+                allowfullscreen>Underwater Robot</iframe>
         </div>
 
     </div>
